added my simple first blog

--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="blogs.css">
     <title>my simple website</title>
     <head><h1> my simple website</h1></head>
 </head>
 <body>
-    
+     <div><h3>my first website</h3>
+     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam sit ab culpa, laborum eius incidunt ex doloribus. Possimus quidem unde accusantium aperiam in laboriosam assumenda illum. Sequi soluta exercitationem facilis.</p>
+     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam sit ab culpa, laborum eius incidunt ex doloribus. Possimus quidem unde accusantium aperiam in laboriosam assumenda illum. Sequi soluta exercitationem facilis.</p> 
+     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam sit ab culpa, laborum eius incidunt ex doloribus. Possimus quidem unde accusantium aperiam in laboriosam assumenda illum. Sequi soluta exercitationem facilis.</p>
+
+    </div>
+
 </body>
 </html>
