added the secnd and third blod

--- a/index.html
+++ b/index.html
@@ -10,10 +10,15 @@
 <body>
      <div><h3>my first website</h3>
      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam sit ab culpa, laborum eius incidunt ex doloribus. Possimus quidem unde accusantium aperiam in laboriosam assumenda illum. Sequi soluta exercitationem facilis.</p>
-     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam sit ab culpa, laborum eius incidunt ex doloribus. Possimus quidem unde accusantium aperiam in laboriosam assumenda illum. Sequi soluta exercitationem facilis.</p> 
-     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam sit ab culpa, laborum eius incidunt ex doloribus. Possimus quidem unde accusantium aperiam in laboriosam assumenda illum. Sequi soluta exercitationem facilis.</p>
-
     </div>
+    <div>
+        <h3>my second blog</h3> 
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam sit ab culpa, laborum eius incidunt ex doloribus. Possimus quidem unde accusantium aperiam in laboriosam assumenda illum. Sequi soluta exercitationem facilis.</p> </div>
+        <div>
+            <h3>my third blog</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam sit ab culpa, laborum eius incidunt ex doloribus. Possimus quidem unde accusantium aperiam in laboriosam assumenda illum. Sequi soluta exercitationem facilis.</p> 
+        </div>
+
 
 </body>
 </html>
