add a next work

--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
             <h3>my third blog</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam sit ab culpa, laborum eius incidunt ex doloribus. Possimus quidem unde accusantium aperiam in laboriosam assumenda illum. Sequi soluta exercitationem facilis.</p> 
         </div>
+        <div>
+            <h3>you to push terminal</h3>
+            <ul><li>git add .</li>
+            <li>git commit-m"add a meaningful commit messege</li>
+            <li>git push</li></ul>
+        </div>
 
 
 </body>
