--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
             <li>git commit-m"add a meaningful commit messege</li>
             <li>git push</li></ul>
         </div>
-
+ <div>
+    <h3>dessert item image</h3>
+    <img src="images/dessert item.jpeg" alt="">
+ </div>
 
 </body>
 </html>
